# Math

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  test.sh
.github/workflows/: cmake-multi-platform.yml
ainc/: Util.c  float.c  int.c
cmake/: Core.cmake
include/ae2f/Math/: Mem.h  Util.h  float.auto.imp.h  float.h  float.imp.h  int.h  int.imp.h
test/: __float.h  float.c  float.cc  int.c  int.cc
test/src/: float.c  int.c  int.cc
